Config webpack to create a separate css file.
- Add mini css extract `yarn add mini-css-extract-plugin --dev`
- Add plugin MiniCssExtractPlugin.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -35,6 +35,13 @@
 {% extends 'base.html.twig' %}
 {% import 'Components/Macros/crud-manage-render.html.twig' as render %}
 
+{% block stylesheets %}
+    {{ parent() }}
+
+    <link rel="stylesheet" href="{{ asset('build/vendors.css') }}">
+    <link rel="stylesheet" href="{{ asset('build/crud_manager.css') }}">
+{%  endblock %}
+
 {% block page_content %}
     <div class="row js-crud-manage-row-box">
         <div class="col-md-12">
