--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -1,4 +1,5 @@
 {% extends 'Components/Layout/crud-manage.html.twig' %}
+{% import 'Components/Macros/crud-manage-render.html.twig' as render %}
 
 {% block stylesheets %}
     {{ parent() }}
