--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -41,6 +41,8 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
+            window.crudManager.loadRows();
+
 
             // Delegate selector for edit stock dividend
             $('.js-crud-manage-row-box').closest('section').on(
