--- a/templates/stocks_dividend/index.html.twig
+++ b/templates/stocks_dividend/index.html.twig
@@ -20,11 +20,11 @@
                     titleText: '{{ 'Create new'|trans }} {{ entity_name|trans|title }}',
                     toastTitleText: '{{ entity_name|trans|title }} {{ 'was created successfully.'|trans }}'
                 },
-                {#update: {#}
-                    {#confirmButtonText: '{{ 'Update'|trans }}',#}
-                    {#titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',#}
-                    {#toastTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'#}
-                {#},#}
+                update: {
+                    confirmButtonText: '{{ 'Update'|trans }}',
+                    titleText: '{{ 'Update'|trans }} {{ entity_name|trans|title }}',
+                    toastTitleText: '{{ entity_name|trans|title }} {{ 'was updated successfully.'|trans }}'
+                },
                 {#delete: {#}
                     {#toastTitleText: '{{ entity_name|trans|title }} {{ 'was deleted successfully.'|trans }}'#}
                 {#}#}
@@ -35,8 +35,12 @@
             window.crudManager.setRouteGenerating((entityType, endpoint, id = null) => {
                 let route = '';
                 let param = {
-                    'id': {{ stock.id }}
+                    '_id': {{ stock.id }}
                 };
+
+                if (id) {
+                    param['id'] = id;
+                }
 
                 switch (endpoint) {
                     case 'list':
@@ -47,18 +51,18 @@
                         route = Routing.generate(entityType + '_new', param);
 
                         break;
-                    // case 'get':
-                    //     route = Routing.generate(this.entityType + '_get', param);
-                    //
-                    //     break;
-                    // case 'edit':
-                    //     route = Routing.generate(this.entityType + '_edit', param);
-                    //
-                    //     break;
-                    // case 'delete':
-                    //     route = Routing.generate(this.entityType + '_delete', param);
-                    //
-                    //     break;
+                    case 'get':
+                        route = Routing.generate(entityType + '_get', param);
+
+                        break;
+                    case 'edit':
+                        route = Routing.generate(entityType + '_edit', param);
+
+                        break;
+                    case 'delete':
+                        route = Routing.generate(entityType + '_delete', param);
+
+                        break;
                     default:
                         throw 'Endpoint ' + endpoint + ' not supported';
                 }
@@ -68,8 +72,8 @@
 
             window.crudManager.withForm(form);
             window.crudManager.withCreateButton();
-            // window.crudManager.withEditButton();
-            // window.crudManager.withDeleteButton();
+            window.crudManager.withEditButton();
+            window.crudManager.withDeleteButton();
 
             window.crudManager.loadRows();
         });
