Update view to autoload rows when load page.

--- a/templates/stock_market/index.html.twig
+++ b/templates/stock_market/index.html.twig
@@ -43,6 +43,7 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
+            window.crudManager.loadRows();
         });
     </script>
 {% endblock %}
