--- a/templates/accounts/index.html.twig
+++ b/templates/accounts/index.html.twig
@@ -34,6 +34,7 @@
             window.crudManager.withEditButton();
             window.crudManager.withDeleteButton();
 
+            window.crudManager.loadRows();
         });
     </script>
 {% endblock %}
