Add update dividend yield.
Updated dividend yield when create, update or delete dividend history from the stock.

--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -54,7 +54,7 @@
                     const $row = $(e.currentTarget).closest('tr');
                     const id = $row.data('id');
 
-                    window.location = Routing.generate('stock_dividend_index', {id})
+                    window.location = Routing.generate('stock_dividend_index', {'_id': id})
                 }
             );
         });
