Minor changes in the menu and the page.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
 {% block logo_large %}<b>Investment</b> Manager{% endblock %}
 
 {% block page_title %}{{ entity_name|trans|title }}s{% endblock %}
+{% block page_subtitle %}{% endblock %}
 
 {% block javascripts %}
     {{ parent() }}
