Update crud manager to use loaded data.

--- a/templates/Components/Layout/crud-manage.html.twig
+++ b/templates/Components/Layout/crud-manage.html.twig
@@ -236,6 +236,7 @@
                 wrapper: contentWrapper,
                 swalFormOptions: swalFormOptions,
                 swalConfirmOptions: swalConfirmOptions,
+                toastOptions: toastOptions,
                 showPerPage: 10,
             });
         });
