Fix and improve stock query and stock info relation.
Fixed the query to fetch stocks and improved the relation with stock info.

--- a/assets/css/CrudManager.scss
+++ b/assets/css/CrudManager.scss
@@ -26,3 +26,11 @@
     border-color: #dd4b39 !important;
     box-shadow: none;
 }
+
+.js-manager-table-extra-row {
+    display: none;
+}
+
+.js-manager-table-extra-row.in {
+    display: table-cell;
+}
