--- a/templates/stocks/index.html.twig
+++ b/templates/stocks/index.html.twig
@@ -79,6 +79,17 @@
                     window.location = Routing.generate('stock_dividend_index', {'_id': id})
                 }
             );
+
+            $('.sidebar-toggle').on(
+                'click',
+                function(e) {
+                    let $button = $(e.currentTarget);
+
+                    if ($button.data('toggle') === 'push-menu') {
+                        $('.table .toggleDisplay').toggleClass("in");
+                    }
+                }
+            );
         });
     </script>
 {% endblock %}
